Carussel Comp. Fix: imgs align items center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4812,6 +4812,9 @@ li.product:before {
 .carrusel__item--image {
 	text-align: center;
 	position: relative;
+	display: inline-flex !important;
+	align-items: center;
+	justify-content: center;
 }
 
 .carrusel__item--image img {
