--- a/src/sass/ultimate-fields/componentes/carrusel.sass
+++ b/src/sass/ultimate-fields/componentes/carrusel.sass
@@ -11,6 +11,9 @@
     &__item--image
         text-align: center
         position: relative
+        display: inline-flex !important
+        align-items: center
+        justify-content: center
         img
             margin-bottom: 0 !important
         &__link
